--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "jquery": "1.9.1",
     "angular": "~1.2.12-build.2226",
-    "angular-route": "~1.2.12-build.2226"
+    "angular-route": "~1.2.12-build.2226",
+    "mobile-angular-ui":  "v1.0.5-alpha"
   },
   "devDependencies": {
   }
