--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "EasyFood",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "start": "node app.js"
-  },
-  "dependencies": {
-    "express": "3.4.8",
-    "ejs": "1.0.0",
-    "async": "0.9.0",
-    "mysql": "2.5.2"
-  }
+    "name": "EasyFood",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node app.js"
+    },
+    "dependencies": {
+        "express": "3.4.8",
+        "ejs": "1.0.0",
+        "async": "0.9.0",
+        "mysql": "2.5.2",
+        " mysql-orm": "0.0.8"
+    },
+    "devDependencies": {
+        "should": "~2.1.1",
+        "grunt": "~0.4.2",
+        "grunt-contrib-less": "~0.8.3",
+        "grunt-contrib-watch": "~0.5.3",
+        "grunt-contrib-jshint": "~0.7.2",
+        "grunt-mocha-cli": "~1.4.0",
+        "grunt-mocha-cov": "~0.1.1",
+        "grunt-jscoverage": "~0.0.3",
+        "grunt-contrib-clean": "~0.5.0",
+        "grunt-plato": "~0.2.1"
+    }
 }
