--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "jquery": "1.9.1",
     "angular": "~1.2.12-build.2226",
     "angular-route": "~1.2.12-build.2226",
-    "mobile-angular-ui":  "v1.0.5-alpha"
+    "mobile-angular-ui":  "v1.0.5-alpha",
+    "reserveLoadjs": ">=0.4.1"
   },
   "devDependencies": {
   }
