--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
-  "name": "angular-basic",
-  "version": "0.0.1",
-  "dependencies": {
-    "jquery": "1.9.1",
-    "angular": "~1.2.12-build.2226",
-    "angular-route": "~1.2.12-build.2226",
-    "mobile-angular-ui":  "v1.0.5-alpha"
-  },
-  "devDependencies": {
-  }
+    "name": "angular-basic",
+    "version": "0.0.1",
+    "dependencies": {
+        "jquery": "1.9.1",
+        "angular": "~1.2.12-build.2226",
+        "angular-route": "~1.2.12-build.2226",
+        "mobile-angular-ui": "v1.0.5-alpha",
+        "reserveLoadjs": ">=0.4.1"
+    },
+    "devDependencies": {
+    }
 }
